--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/theme.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/animate.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/slick.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="assets/css/theme.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
   <!--[if lt IE 9]>
   <script src="assets/js/html5shiv.min.js"></script>
   <script src="assets/js/respond.min.js"></script>
@@ -85,10 +85,10 @@
     </div>
   </div>
 </footer>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/wow.min.js"></script>
-<script src="assets/js/custom.js"></script>
-<script src="assets/js/slick.min.js"></script>
+<!--<script src="assets/js/jquery.min.js"></script>-->
+<!--<script src="assets/js/bootstrap.min.js"></script>-->
+<!--<script src="assets/js/wow.min.js"></script>-->
+<!--<script src="assets/js/custom.js"></script>-->
+<!--<script src="assets/js/slick.min.js"></script>-->
 </body>
 </html>
