--- a/src/index.html
+++ b/src/index.html
@@ -28,70 +28,68 @@
   <div id="status">&nbsp;</div>
 </div>
 <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-<div class="container">
   <app-root>Loading...</app-root>
-</div>
-<!--<app-footer></app-footer>-->
-<footer id="footer">
-  <div class="footer_top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
-            <ul class="flicker_nav">
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
-            <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="single_footer_top wow fadeInRight">
-            <h2>About Us</h2>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed nec laoreet orci, eget ullamcorper quam. Phasellus lorem neque, </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="footer_bottom">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="index.html">magExpress</a></p>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
+
+<!--<footer id="footer">-->
+  <!--<div class="footer_top">-->
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="col-lg-4 col-md-4 col-sm-4">-->
+          <!--<div class="single_footer_top wow fadeInLeft">-->
+            <!--<h2>Flicker Images</h2>-->
+            <!--<ul class="flicker_nav">-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+              <!--<li><a href="#"><img src="assets/images/75x75.jpg" alt=""></a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-lg-4 col-md-4 col-sm-4">-->
+          <!--<div class="single_footer_top wow fadeInDown">-->
+            <!--<h2>Labels</h2>-->
+            <!--<ul class="labels_nav">-->
+              <!--<li><a href="#">Gallery</a></li>-->
+              <!--<li><a href="#">Business</a></li>-->
+              <!--<li><a href="#">Games</a></li>-->
+              <!--<li><a href="#">Fashion</a></li>-->
+              <!--<li><a href="#">Sports</a></li>-->
+              <!--<li><a href="#">Technology</a></li>-->
+              <!--<li><a href="#">Slider</a></li>-->
+              <!--<li><a href="#">Life &amp; Style</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-lg-4 col-md-4 col-sm-4">-->
+          <!--<div class="single_footer_top wow fadeInRight">-->
+            <!--<h2>About Us</h2>-->
+            <!--<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed nec laoreet orci, eget ullamcorper quam. Phasellus lorem neque, </p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="footer_bottom">-->
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
+          <!--<div class="footer_bottom_left">-->
+            <!--<p>Copyright &copy; 2045 <a href="index.html">magExpress</a></p>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
+          <!--<div class="footer_bottom_right">-->
+            <!--<p>Developed BY Wpfreeware</p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</footer>-->
 <!--<script type="text/javascript">-->
     <!--document.addEventListener("DOMContentLoaded", function(event) {-->
         <!--VK.Widgets.Comments("vk_comments", {limit: 10, width: "", attach: "*"});-->
