--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,11 @@
   <script src="assets/js/html5shiv.min.js"></script>
   <script src="assets/js/respond.min.js"></script>
   <![endif]-->
+  <script src="https://yastatic.net/share2/share.js" async></script>
   <!-- Put this script tag to the <head> of your page -->
-  <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
+  <script type="text/javascript" src="//vk.com/js/api/openapi.js?142"></script>
 
-  <script type="text/javascript">
-      VK.init({apiId: 5900450, onlyWidgets: true});
-  </script>
+
 </head>
 <body>
 <div id="preloader">
