removed VK api, add some images size mechanism.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="assets/js/html5shiv.min.js"></script>
     <script src="assets/js/respond.min.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="//vk.com/js/api/openapi.js?142"></script>
+    <!--<script type="text/javascript" src="//vk.com/js/api/openapi.js?142"></script>-->
 </head>
 <body>
 <div id="preloader">
